# WorldCarbonPricingDatabase

./: .gitattributes  .gitignore  IPCC_coverage.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml  sum_stat.jl
.github/ISSUE_TEMPLATE/: pricing-mechanism-coverage.md  pricing-mechanism-price.md
.github/workflows/: DeployPage.yml  icap_download.yml  pusblish-update.yml
Data/: README.md
Data/national/: CP_Afghanistan.csv  CP_Albania.csv  CP_Algeria.csv  CP_Andorra.csv  CP_Antigua_and_Barbuda.csv  CP_Austria.csv  CP_Azerbaijan.csv  CP_Bahamas_The.csv  CP_Bahrain.csv  CP_Bangladesh.csv  CP_Barbados.csv  CP_Belgium.csv  CP_Belize.csv  CP_Bhutan.csv  CP_Bosnia_and_Herzegovina.csv  (+102 more)
Scripts_basic/: coverage_jur_dummy.py  extract.py  sumstat.jl
Sources/: Academic_papers.csv  Books.csv  Data_files.csv  Legislation.csv  Official_gov_publications.csv  Reports.csv  Webpages.csv  _Legislation.csv  _Official_gov_publications.csv  _README.md  _Reports.csv  _Webpages.csv  __README.md
Sources_documents/: README.md
_code/: agg_dum.py  extract.py  review_app.py  sector_aggregate_dummies.py
_update_management/: missing_fields_report.csv  missing_rows_report.csv  update_report.csv
aux_files/: scheme_identifiers_v4.csv
css/: bootstrap.min.css
docs/: Makefile  aux_scripts.md  conf.py  index.md  industry_mapping.md  overview.md  requirements-docs.txt  review_app.md  seed_schema.md  update_workflow.md  wcpd_architecture.mmd
page/: Manifest.toml  Project.toml  config.md  index.md
scripts/: agg_dum.py
wcpd_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+7119 files in other folders)
